Fixes #394 Fix bug where league select - was not updated after adding new league - would grow endlessly after adding many leagues, now scrolls - would select the create option when clicking on it Fix overview to use space more efficiently Fix avatars not aligned correctly Remove unneeded server loading for players/teams pages Fix screen size for mobile Update latest match date display to show relative time from when logged

--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -90,3 +90,19 @@
     @apply px-4;
   }
 }
+
+.h-screen-safe {
+  height: 100vh;
+}
+
+@supports (height: 100cqh) {
+  .h-screen-safe {
+    height: 100cqh;
+  }
+}
+
+@supports (height: 100svh) {
+  .h-screen-safe {
+    height: 100svh;
+  }
+}
